{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 532,
  "lineage": "343a7c71-d6c9-71db-0ad2-bf8e2b93d35c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "face_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b05d988257befbbe",
            "arn": "arn:aws:ec2:us-east-2:612526786257:instance/i-08beffefba78a4c17",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08beffefba78a4c17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "face-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eac1f8d9d5e32547",
            "private_dns": "ip-10-0-1-207.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.207",
            "public_ip": "3.135.204.49",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0933eea51dd0b468d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ad1fd622115a233a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1bd944c54d4d6b3",
            "tags": {
              "Name": "FaceAppInstance"
            },
            "tags_all": {
              "Name": "FaceAppInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad1fd622115a233a"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.face_subnet",
            "aws_vpc.face_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "face_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:612526786257:internet-gateway/igw-03ebe887e8a36a9ab",
            "id": "igw-03ebe887e8a36a9ab",
            "owner_id": "612526786257",
            "region": "us-east-2",
            "tags": {
              "Name": "face-igw"
            },
            "tags_all": {
              "Name": "face-igw"
            },
            "vpc_id": "vpc-0affbad2dcef89ea1"
          },
          "dependencies": [
            "aws_vpc.face_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "face_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:612526786257:route-table/rtb-03ea66c693af143bc",
            "id": "rtb-03ea66c693af143bc",
            "owner_id": "612526786257",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ebe887e8a36a9ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "face-rt"
            },
            "tags_all": {
              "Name": "face-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0affbad2dcef89ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.face_igw",
            "aws_vpc.face_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "face_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056a43616073c922c",
            "region": "us-east-2",
            "route_table_id": "rtb-03ea66c693af143bc",
            "subnet_id": "subnet-0b1bd944c54d4d6b3"
          },
          "dependencies": [
            "aws_internet_gateway.face_igw",
            "aws_route_table.face_route_table",
            "aws_subnet.face_subnet",
            "aws_vpc.face_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:612526786257:security-group/sg-0ad1fd622115a233a",
            "description": "Permitir acceso SSH y HTTP/Flask",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad1fd622115a233a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTP (Flask por defecto)",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "face-sg",
            "name_prefix": "",
            "owner_id": "612526786257",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "face-sg"
            },
            "tags_all": {
              "Name": "face-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0affbad2dcef89ea1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.face_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "face_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:612526786257:subnet/subnet-0b1bd944c54d4d6b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1bd944c54d4d6b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "612526786257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "face-subnet"
            },
            "tags_all": {
              "Name": "face-subnet"
            },
            "vpc_id": "vpc-0affbad2dcef89ea1"
          },
          "dependencies": [
            "aws_vpc.face_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "face_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:612526786257:vpc/vpc-0affbad2dcef89ea1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2ac4d9f9d166aad",
            "default_route_table_id": "rtb-031ed83d3d85a6718",
            "default_security_group_id": "sg-0841fa9f91e8e7162",
            "dhcp_options_id": "dopt-0134fbe9318ab9b37",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0affbad2dcef89ea1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031ed83d3d85a6718",
            "owner_id": "612526786257",
            "region": "us-east-2",
            "tags": {
              "Name": "face-vpc"
            },
            "tags_all": {
              "Name": "face-vpc"
            }
          }
        }
      ]
    }
  ]
}